feat: Enhance Telegram bot functionality and implement rate limiting
- Added scheduling support to the main application for future tasks.
- Configured a thread pool for handling Telegram bot updates asynchronously.
- Improved the AskController to log question length and handle reindexing with proper error responses.
- Implemented a global exception handler to provide a consistent error message format.
- Updated AskRequest validation to limit question length to 4000 characters.
- Enhanced DocumentIngestionService with a reindexing lock to prevent concurrent operations and ensure data integrity.
- Updated TelegramBotService to include rate limiting for user requests and admin command checks.
- Added security configuration to enforce basic authentication for admin endpoints.
- Implemented a rate limiting filter to restrict requests per minute based on client IP.
- Created a TokenBucket utility for managing rate limits.
- Updated application configuration to include new security and rate limiting settings.
- Added tests for new features, including rate limiting and security checks.